Rename extensions etc. to KongPlugins (#26)
* Rename extensions etc. to KongPlugins

* Missed some conversions

* Last bits missed because of Moq (use NSubstitute!)

* Last bit - let's align the lib name

--- a/src/Kongverge/Kongverge.csproj
+++ b/src/Kongverge/Kongverge.csproj
@@ -27,7 +27,7 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Kongverge.Common\Kongverge.Common.csproj" />
-    <ProjectReference Include="..\Kongverge.Extension\Kongverge.Extension.csproj" />
+    <ProjectReference Include="..\Kongverge.Extension\Kongverge.KongPlugin.csproj" />
   </ItemGroup>
   <ItemGroup>
     <None Update="appsettings.json">
