--- a/src/Kongverge.Common/Kongverge.Common.csproj
+++ b/src/Kongverge.Common/Kongverge.Common.csproj
@@ -8,6 +8,6 @@
     <PackageReference Include="Serilog.Sinks.Console" Version="3.1.1" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Kongverge.Extension\Kongverge.Extension.csproj" />
+    <ProjectReference Include="..\Kongverge.Extension\Kongverge.KongPlugin.csproj" />
   </ItemGroup>
 </Project>
