--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 
 #ignore thumbnails created by windows
 Thumbs.db
+
 #Ignore files build by Visual Studio
 *.obj
 *.exe
@@ -30,3 +31,5 @@ _ReSharper*/
 .vscode
 .vs
 artifacts/
+
+launchSettings.json
