--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 #ignore thumbnails created by windows
 Thumbs.db
 #Ignore files build by Visual Studio
+.dotnetcli/
 *.obj
 *.exe
 *.pdb
@@ -30,3 +31,5 @@ _ReSharper*/
 .vscode
 .vs
 artifacts/
+*.ncrunchsolution
+
