Move the integration tests under src Move the integration tests to a folder under src As all the other tests are similar

--- a/src/Kongverge.Integration.Tests/Kongverge.Integration.Tests.csproj
+++ b/src/Kongverge.Integration.Tests/Kongverge.Integration.Tests.csproj
@@ -25,7 +25,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\src\Kongverge\Kongverge.csproj" />
+    <ProjectReference Include="..\Kongverge\Kongverge.csproj" />
   </ItemGroup>
 
 </Project>
