--- a/src/Kongverge.Integration.Tests/Kongverge.Integration.Tests.csproj
+++ b/src/Kongverge.Integration.Tests/Kongverge.Integration.Tests.csproj
@@ -19,6 +19,7 @@
 
   <ItemGroup>
     <PackageReference Include="FluentAssertions" Version="5.4.1" />
+    <PackageReference Include="NCrunch.Framework" Version="3.17.0" />
     <PackageReference Include="NSubstitute" Version="3.1.0" />
     <PackageReference Include="xunit" Version="2.4.0" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.0" />
