Extract common TestHelpers project

--- a/src/Kongverge.Common.Tests/Kongverge.Common.Tests.csproj
+++ b/src/Kongverge.Common.Tests/Kongverge.Common.Tests.csproj
@@ -6,13 +6,13 @@
 
   <ItemGroup>
     <PackageReference Include="FluentAssertions" Version="5.4.1" />
-    <PackageReference Include="NBuilder" Version="6.0.0" />
     <PackageReference Include="xunit" Version="2.4.0" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.0" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Kongverge.Common\Kongverge.Common.csproj" />
+    <ProjectReference Include="..\Kongverge.TestHelpers\Kongverge.TestHelpers.csproj" />
   </ItemGroup>
 
 </Project>
