--- a/src/Kongverge.Validation.Tests/Kongverge.Validation.Tests.csproj
+++ b/src/Kongverge.Validation.Tests/Kongverge.Validation.Tests.csproj
@@ -13,6 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Kongverge.TestHelpers\Kongverge.TestHelpers.csproj" />
     <ProjectReference Include="..\Kongverge.Validation\Kongverge.Validation.csproj" />
   </ItemGroup>
 
