--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -4,5 +4,8 @@
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
     <LangVersion>latest</LangVersion>
     <Copyright>Copyright (c) JustEat 2018-$([System.DateTime]::Now.ToString(yyyy))</Copyright>
+    <VersionPrefix>0.1.0</VersionPrefix>
+    <RepositoryType>git</RepositoryType>
+    <RepositoryUrl>https://github.com/justeat/kongverge.git</RepositoryUrl>
   </PropertyGroup>
 </Project>
