--- a/src/Kongverge/Kongverge.csproj
+++ b/src/Kongverge/Kongverge.csproj
@@ -2,6 +2,8 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp2.1</TargetFramework>
+    <PackAsTool>true</PackAsTool>
+    <ToolCommandName>kongverge</ToolCommandName>
   </PropertyGroup>
   <ItemGroup>
     <Content Include="appsettings.json">
