Clean up project references

--- a/src/Kongverge.Integration.Tests/Kongverge.Integration.Tests.csproj
+++ b/src/Kongverge.Integration.Tests/Kongverge.Integration.Tests.csproj
@@ -33,6 +33,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Kongverge.Common\Kongverge.Common.csproj" />
     <ProjectReference Include="..\Kongverge.TestHelpers\Kongverge.TestHelpers.csproj" />
     <ProjectReference Include="..\Kongverge\Kongverge.csproj" />
   </ItemGroup>
