--- a/src/Kongverge.TestHelpers/Kongverge.TestHelpers.csproj
+++ b/src/Kongverge.TestHelpers/Kongverge.TestHelpers.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="AutoFixture" Version="4.5.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
   </ItemGroup>
 
 </Project>
