--- a/src/Kongverge.Common.Tests/Kongverge.Common.Tests.csproj
+++ b/src/Kongverge.Common.Tests/Kongverge.Common.Tests.csproj
@@ -5,8 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="FluentAssertions" Version="5.4.1" />
-    <PackageReference Include="Moq" Version="4.9.0" />
+    <PackageReference Include="TestStack.BDDfy.Xunit" Version="1.0.0" />
     <PackageReference Include="xunit" Version="2.4.0" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.0" />
   </ItemGroup>
