--- a/src/Kongverge.TestHelpers/Kongverge.TestHelpers.csproj
+++ b/src/Kongverge.TestHelpers/Kongverge.TestHelpers.csproj
@@ -6,6 +6,9 @@
 
   <ItemGroup>
     <PackageReference Include="AutoFixture" Version="4.5.0" />
+    <PackageReference Include="FluentAssertions" Version="5.4.1" />
+    <PackageReference Include="Moq.AutoMock" Version="1.2.0.111" />
+    <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
   </ItemGroup>
 
 </Project>
