--- a/src/Kongverge.Integration.Tests/Kongverge.Integration.Tests.csproj
+++ b/src/Kongverge.Integration.Tests/Kongverge.Integration.Tests.csproj
@@ -16,6 +16,7 @@
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="2.1.1" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="2.1.1" />
     <PackageReference Include="NCrunch.Framework" Version="3.17.0" />
+    <PackageReference Include="TestStack.BDDfy.Xunit" Version="1.0.0" />
     <PackageReference Include="xunit" Version="2.4.0" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.0" />
   </ItemGroup>
@@ -24,6 +25,12 @@
     <ProjectReference Include="..\Kongverge.Common\Kongverge.Common.csproj" />
     <ProjectReference Include="..\Kongverge.TestHelpers\Kongverge.TestHelpers.csproj" />
     <ProjectReference Include="..\Kongverge\Kongverge.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="ProgramTests\InputFolder*\*">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
