--- a/src/Kongverge.IntegrationTests/Kongverge.IntegrationTests.csproj
+++ b/src/Kongverge.IntegrationTests/Kongverge.IntegrationTests.csproj
@@ -22,4 +22,13 @@
     </None>
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Properties\" />
+  </ItemGroup>
+
+  <Target Name="BuildDockerServices" AfterTargets="Build">
+    <Message Importance="high" Text="Building Docker services..." />
+    <Exec Command="docker-compose up --no-start" />
+  </Target>
+
 </Project>
