Trying to fix AppVeyor build error: "HNS failed with error : The parameter is incorrect."

--- a/test/Kongverge.IntegrationTests/docker-compose.yml
+++ b/test/Kongverge.IntegrationTests/docker-compose.yml
@@ -49,3 +49,7 @@ services:
     command: kong migrations up
     healthcheck:
       test: "exit 0"
+  networks:
+    default:
+      external:
+        name: nat
